tests/cases/scc/error/0002-missinginclude.c.res
./tests/cases/scc/error/0002-missinginclude.c:2:10:	error:   could not open include file "MISSING.h".
exit code 1
